# ticksy-booking-app

./: Readme.md  command.md  docker-compose.yml
book-my-show-ai/: .gitignore  command.md  main.py  pyproject.toml  requirements.txt
book-my-show-ai/src/instructions/: grade_documents_agent.py  query_parser_route_agent.py  user_input_route_agent.py
book-my-show-ai/src/llms/: openai_llm.py
book-my-show-ai/src/nodes/: information_node.py  query_parser_route_node.py  user_input_route_node.py
book-my-show-ai/src/states/: grade_documents_state.py  graph_state.py  information_state.py  query_parser_route_state.py  response_state.py  user_input_route_state.py
book-my-show-ai/src/tools/: web_search_tool.py
book-my-show-ai/src/vector_store/: pinecone_vector_database.py
book-my-show-ai/tests/: test_query_parser_route_node_param.py  test_user_input_route_node.py
book-my-show-be/: .dockerignore  Dockerfile  command.md  pom.xml
book-my-show-fe/: next.config.ts  package-lock.json  package.json
data-ingestion/: .gitignore  compile_proto.py  main.py  pyproject.toml  requirements.txt
data-ingestion/src/: events.py  movies.py  pinecone_vector_database.py  showtimes.py  venue.py
data-ingestion/src/data/: database_events.json  database_movies.json  database_venues.json  events.json  events_showtime.json  movies.json  movies_showtime.json
data-ingestion/src/ticksy_proto_schema/: __init__.py  booking_pb2.py  booking_pb2_grpc.py  event_pb2.py  event_pb2_grpc.py  movie_pb2.py  movie_pb2_grpc.py  showtime_pb2.py  showtime_pb2_grpc.py  utils_pb2.py  utils_pb2_grpc.py
(+196 files in other folders)
