[project]
name = "book-my-show-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "gradio>=5.46.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-pinecone>=0.2.12",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "pinecone>=7.3.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.36.0",
]
